test/errors/semantic/decorator_nonfunc_return.cml
module semantic_decorator_nonfunc_return

with <k: int>
func bad_decorator(f: (x: int) => int): int {
    return k + 1
}

@bad_decorator<1>
func base(x: int): int {
    return x
}

func main(): int sync {
    return base(1)
}
